优化TesseractTargetMarker的使用逻辑；添加新的火箭组装器配方